mudar forma de converter p/ md

--- a/content/curso-r/2017-05-27-ocr.md
+++ b/content/curso-r/2017-05-27-ocr.md
@@ -4,27 +4,85 @@ date = "2017-05-28 11:07:31"
 categories = ["curso-r"]
 +++
 
-<div><p class="text-muted text-uppercase mb-small text-right"> Por <a href="http://curso-r.com/author/julio">Julio</a> 28/05/2017 </p><div id="post-content"> <p>J&#xE1; precisou extrair dados de arquivos pdf? Bom, eu j&#xE1;. Eu trabalho com <a href="http://abj.org.br/">jurimetria</a> e preciso extrair dados de di&#xE1;rios oficiais, peti&#xE7;&#xF5;es, senten&#xE7;as, ent&#xE3;o j&#xE1; viu n&#xE9;&#x2026;</p>
-<p>A primeira pergunta que voc&#xEA; precisa fazer antes de ler um pdf &#xE9;: o arquivo &#xE9; <em>digital</em> ou <em>digitalizado</em>?</p>
+<p class="text-muted text-uppercase mb-small text-right">
+Por <a href="http://curso-r.com/author/julio">Julio</a> 28/05/2017
+</p>
+<p>
+Já precisou extrair dados de arquivos pdf? Bom, eu já. Eu trabalho com
+<a href="http://abj.org.br/">jurimetria</a> e preciso extrair dados de
+diários oficiais, petições, sentenças, então já viu né…
+</p>
+<p>
+A primeira pergunta que você precisa fazer antes de ler um pdf é: o
+arquivo é <em>digital</em> ou <em>digitalizado</em>?
+</p>
 <ul>
-<li>Se for digital, significa que ele pode ser transcrito diretamente para v&#xE1;rios formatos: texto, html, xml e at&#xE9; mesmo <code>data.frame</code>s diretamente.</li>
+<li>
+Se for digital, significa que ele pode ser transcrito diretamente para
+vários formatos: texto, html, xml e até mesmo <code>data.frame</code>s
+diretamente.
+</li>
 </ul>
-<p><a href="https://github.com/curso-r/site/raw/master/content/blog/2017-05-27-ocr/pdf_digital.pdf">Vamos usar esse exemplo de PDF digital</a></p>
-<p>Se estiver no desktop, &#xE9; poss&#xED;vel ver o documento abaixo:</p> <ul>
-<li>Se for digitalizado, voc&#xEA; precisar&#xE1; passar um algoritmo de OCR (Optical Character Recognition) para extrair os dados. Provavelmente seu output nesse caso ser&#xE1; sempre texto.</li>
+<p>
+<a href="https://github.com/curso-r/site/raw/master/content/blog/2017-05-27-ocr/pdf_digital.pdf">Vamos
+usar esse exemplo de PDF digital</a>
+</p>
+<p>
+Se estiver no desktop, é possível ver o documento abaixo:
+</p>
+<ul>
+<li>
+Se for digitalizado, você precisará passar um algoritmo de OCR (Optical
+Character Recognition) para extrair os dados. Provavelmente seu output
+nesse caso será sempre texto.
+</li>
 </ul>
-<p><a href="https://github.com/curso-r/site/raw/master/content/blog/2017-05-27-ocr/pdf_digitalizado.pdf">Vamos usar esse exemplo de PDF digitalizado</a></p>
-<p>Se estiver no desktop, &#xE9; poss&#xED;vel ver o documento abaixo:</p> <p><strong>Obs:</strong> &#xE9; poss&#xED;vel que seu arquivo seja digitalizado, mas j&#xE1; com uma OCR passada no pr&#xF3;prio arquivo. Nesse caso, voc&#xEA; pode tratar o documento como digital.</p>
-<p>Os cr&#xE9;ditos dos pacotes abaixo v&#xE3;o todos para o <a href="https://github.com/jeroen">Jeroen Ooms</a>, um dos maiores autores de pacotes da comunidade <code>R</code> nos &#xFA;ltimos dez anos. Sou f&#xE3; desse cara!</p> <div id="pacote-tesseract-para-pdfs-digitalizados" class="section level2"> <p>O <code>tesseract</code> &#xE9; uma biblioteca escrita em <code>C</code> e &#xE9; uma das mais famosas ferramentas abertas para extra&#xE7;&#xE3;o de textos a partir de imagens. O pacote em <code>R</code> de mesmo nome serve para usar essa biblioteca pelo <code>R</code> sem causar dores de cabe&#xE7;a.</p>
-<p>Para instalar o <code>tesseract</code> no Windows, basta rodar</p>
+<p>
+<a href="https://github.com/curso-r/site/raw/master/content/blog/2017-05-27-ocr/pdf_digitalizado.pdf">Vamos
+usar esse exemplo de PDF digitalizado</a>
+</p>
+<p>
+Se estiver no desktop, é possível ver o documento abaixo:
+</p>
+<p>
+<strong>Obs:</strong> é possível que seu arquivo seja digitalizado, mas
+já com uma OCR passada no próprio arquivo. Nesse caso, você pode tratar
+o documento como digital.
+</p>
+<p>
+Os créditos dos pacotes abaixo vão todos para o
+<a href="https://github.com/jeroen">Jeroen Ooms</a>, um dos maiores
+autores de pacotes da comunidade <code>R</code> nos últimos dez anos.
+Sou fã desse cara!
+</p>
+<p>
+O <code>tesseract</code> é uma biblioteca escrita em <code>C</code> e é
+uma das mais famosas ferramentas abertas para extração de textos a
+partir de imagens. O pacote em <code>R</code> de mesmo nome serve para
+usar essa biblioteca pelo <code>R</code> sem causar dores de cabeça.
+</p>
+<p>
+Para instalar o <code>tesseract</code> no Windows, basta rodar
+</p>
 <pre class="r"><code>install.packages(&apos;tesseract&apos;)</code></pre>
-<p>Para Mac e Linux, siga as instru&#xE7;&#xF5;es <a href="https://github.com/ropensci/tesseract">dessa p&#xE1;gina</a>.</p>
-<p>A principal fun&#xE7;&#xE3;o do pacote <code>tesseract</code> &#xE9; a <code>ocr()</code>. Seu input &#xE9; o caminho de uma imagem (pdf, jpeg, tiff, entre outras) e seu output &#xE9; um texto. Logo, nosso primeiro passo &#xE9; transformar o pdf em imagem.</p>
+<p>
+Para Mac e Linux, siga as instruções
+<a href="https://github.com/ropensci/tesseract">dessa página</a>.
+</p>
+<p>
+A principal função do pacote <code>tesseract</code> é a
+<code>ocr()</code>. Seu input é o caminho de uma imagem (pdf, jpeg,
+tiff, entre outras) e seu output é um texto. Logo, nosso primeiro passo
+é transformar o pdf em imagem.
+</p>
 <pre class="r"><code>pdf &lt;- &apos;2017-05-27-ocr/pdf_digitalizado.pdf&apos;
 img &lt;- pdf_render_page( pdf = pdf, # caminho do arquivo page = 1, # &#xED;ndice da p&#xE1;gina dpi = 300 # resolu&#xE7;&#xE3;o (pontos por polegada)
 ) # salvando imagem num arquivo png
 png::writePNG(img, &apos;2017-05-27-ocr/pdf_digitalizado_img.png&apos;)</code></pre>
-<p>Se o PDF tiver mais p&#xE1;ginas, voc&#xEA; pode fazer um loop para salvar v&#xE1;rias imagens. Agora, usamos a fun&#xE7;&#xE3;o <code>ocr()</code> no arquivo salvo.</p>
+<p>
+Se o PDF tiver mais páginas, você pode fazer um loop para salvar várias
+imagens. Agora, usamos a função <code>ocr()</code> no arquivo salvo.
+</p>
 <pre class="r"><code>library(tesseract)
 txt &lt;- ocr(&apos;2017-05-27-ocr/pdf_digitalizado_img.png&apos;) # imprimindo s&#xF3; os 300 primeiros caracteres do resultado
 cat(str_trunc(txt, 300))</code></pre>
@@ -33,10 +91,18 @@ cat(str_trunc(txt, 300))</code></pre>
 ## This is a sample document to test the PDF Image+Text OCR Engine.
 ## This is a sample document to test the PDF Image+Text OCR Engine.
 ## This is a sample document to test the...</code></pre>
-</div>
-<div id="wrap-up" class="section level2"> <ul>
-<li>Se seu pdf for digital, use <code>pdftools::pdf_text()</code>.</li>
-<li>Se seu pdf for digitalizado, use <code>pdftools::pdf_render_page()</code>, depois <code>png::writePNG()</code> e por fim <code>tesseract::ocr()</code>.</li>
+
+<ul>
+<li>
+Se seu pdf for digital, use <code>pdftools::pdf\_text()</code>.
+</li>
+<li>
+Se seu pdf for digitalizado, use
+<code>pdftools::pdf\_render\_page()</code>, depois
+<code>png::writePNG()</code> e por fim <code>tesseract::ocr()</code>.
+</li>
 </ul>
-<p>&#xC9; isso. Happy coding ;)</p>
-</div> </div></div>
+<p>
+É isso. Happy coding ;)
+</p>
+
