--- a/content/curso-r/2017-04-09-try.md
+++ b/content/curso-r/2017-04-09-try.md
@@ -4,18 +4,41 @@ date = "2017-04-20 11:07:31"
 categories = ["curso-r"]
 +++
 
-<div><p class="text-muted text-uppercase mb-small text-right"> Por <a href="http://curso-r.com/author/julio">Julio</a> 20/04/2017 </p><div id="post-content"> <p>Tratar erros no R &#xE9; importante para identificar problemas nos c&#xF3;digos e evitar retrabalho. Quem nunca rodou um algoritmo pesad&#xED;ssimo que deu errado na &#xFA;ltima itera&#xE7;&#xE3;o? Nesse artigo, veremos como trabalhar com erros no R e a vers&#xE3;o <code>tidy</code> dessas solu&#xE7;&#xF5;es.</p>
-<div id="usando-try-e-trycatch" class="section level2"> <p>A forma tradicional de tratar erros no R &#xE9; com a fun&#xE7;&#xE3;o <code>tryCatch()</code>. Essa fun&#xE7;&#xE3;o tem como primeiro argumento uma express&#xE3;o a ser avaliada e argumentos diversos para trabalhar com os erros. A vers&#xE3;o mais compacta do <code>tryCatch()</code> &#xE9; escrita assim:</p>
+<p class="text-muted text-uppercase mb-small text-right">
+Por <a href="http://curso-r.com/author/julio">Julio</a> 20/04/2017
+</p>
+<p>
+Tratar erros no R é importante para identificar problemas nos códigos e
+evitar retrabalho. Quem nunca rodou um algoritmo pesadíssimo que deu
+errado na última iteração? Nesse artigo, veremos como trabalhar com
+erros no R e a versão <code>tidy</code> dessas soluções.
+</p>
+<p>
+A forma tradicional de tratar erros no R é com a função
+<code>tryCatch()</code>. Essa função tem como primeiro argumento uma
+expressão a ser avaliada e argumentos diversos para trabalhar com os
+erros. A versão mais compacta do <code>tryCatch()</code> é escrita
+assim:
+</p>
 <pre class="r"><code>tryCatch(sqrt(1), error = function(e) e)
 ## [1] 1
 tryCatch(sqrt(&apos;a&apos;), error = function(e) e)
 ## &lt;simpleError in sqrt(&quot;a&quot;): non-numeric argument to mathematical function&gt;</code></pre>
-<p>O <code>try()</code> &#xE9; uma simplifica&#xE7;&#xE3;o de <code>tryCatch()</code> que assume que n&#xE3;o estamos interessados no erro, mas sim no resultado da fun&#xE7;&#xE3;o quando ela d&#xE1; certo. O c&#xF3;digo abaixo n&#xE3;o trava:</p>
+<p>
+O <code>try()</code> é uma simplificação de <code>tryCatch()</code> que
+assume que não estamos interessados no erro, mas sim no resultado da
+função quando ela dá certo. O código abaixo não trava:
+</p>
 <pre class="r"><code>try(sqrt(1))
 ## [1] 1
 try(sqrt(&apos;a&apos;))
 ## Error in sqrt(&quot;a&quot;) : non-numeric argument to mathematical function</code></pre>
-<p>Existe at&#xE9; mesmo uma vers&#xE3;o quieta do <code>try()</code>, usando o par&#xE2;metro <code>silent =</code>. Quando a express&#xE3;o d&#xE1; um erro, o <code>try()</code> retorna a mensagem de erro de forma invis&#xED;vel, ou seja, sem mostrar explicitamente para o usu&#xE1;rio.</p>
+<p>
+Existe até mesmo uma versão quieta do <code>try()</code>, usando o
+parâmetro <code>silent =</code>. Quando a expressão dá um erro, o
+<code>try()</code> retorna a mensagem de erro de forma invisível, ou
+seja, sem mostrar explicitamente para o usuário.
+</p>
 <pre class="r"><code>x &lt;- try(sqrt(&apos;a&apos;), silent = TRUE)
 x
 ## [1] &quot;Error in sqrt(\&quot;a\&quot;) : non-numeric argument to mathematical function\n&quot;
@@ -23,20 +46,50 @@ x
 ## [1] &quot;try-error&quot;
 ## attr(,&quot;condition&quot;)
 ## &lt;simpleError in sqrt(&quot;a&quot;): non-numeric argument to mathematical function&gt;</code></pre>
-</div>
-<div id="usando-adverbios-do-purrr" class="section level2"> <p>Hoje em dia, o jeito mais arrumado de tratar erros &#xE9; usando as fun&#xE7;&#xF5;es <code>purrr::possibly()</code> e suas amigas, <code>quietly()</code> e <code>safely()</code>. Note que todas essas palavras s&#xE3;o adv&#xE9;rbios: o objetivo delas &#xE9; alterar o comportamento de outros verbos (outras fun&#xE7;&#xF5;es). Essa forma de pensar nos nomes das fun&#xE7;&#xF5;es (fun&#xE7;&#xF5;es s&#xE3;o verbos, modificadores de fun&#xE7;&#xF5;es s&#xE3;o adv&#xE9;rbios) faz parte do <a href="http://curso-r.com/blog/2017/02/15/2017-02-16-manifesto-tidy/">princ&#xED;pio tidy</a>.</p>
+
+<p>
+Hoje em dia, o jeito mais arrumado de tratar erros é usando as funções
+<code>purrr::possibly()</code> e suas amigas, <code>quietly()</code> e
+<code>safely()</code>. Note que todas essas palavras são advérbios: o
+objetivo delas é alterar o comportamento de outros verbos (outras
+funções). Essa forma de pensar nos nomes das funções (funções são
+verbos, modificadores de funções são advérbios) faz parte do
+<a href="http://curso-r.com/blog/2017/02/15/2017-02-16-manifesto-tidy/">princípio
+tidy</a>.
+</p>
 <ul>
-<li><code>safely()</code> retorna uma lista com elementos <code>result</code> e <code>error</code>. Quando a fun&#xE7;&#xE3;o n&#xE3;o d&#xE1; erro, <code>error</code> fica igual a <code>NULL</code>. Quando a fun&#xE7;&#xE3;o d&#xE1; erro, <code>error</code> guarda a mensagem de erro e <code>result</code> guarda o valor do par&#xE2;metro <code>otherwise =</code>, que por padr&#xE3;o &#xE9; <code>NULL</code>.</li>
-<li><code>possibly()</code> &#xE9; uma vers&#xE3;o mais otimista do <code>safely()</code>, que exige a defini&#xE7;&#xE3;o de <code>otherwise =</code> e n&#xE3;o guarda as mensagens de erro.</li>
-<li><code>quietly()</code> n&#xE3;o trata erros (ou seja, ela trava quando d&#xE1; erro), mas guarda informa&#xE7;&#xF5;es sobre <em>warnings</em> e <em>messages</em>.</li>
+<li>
+<code>safely()</code> retorna uma lista com elementos
+<code>result</code> e <code>error</code>. Quando a função não dá erro,
+<code>error</code> fica igual a <code>NULL</code>. Quando a função dá
+erro, <code>error</code> guarda a mensagem de erro e <code>result</code>
+guarda o valor do parâmetro <code>otherwise =</code>, que por padrão é
+<code>NULL</code>.
+</li>
+<li>
+<code>possibly()</code> é uma versão mais otimista do
+<code>safely()</code>, que exige a definição de <code>otherwise =</code>
+e não guarda as mensagens de erro.
+</li>
+<li>
+<code>quietly()</code> não trata erros (ou seja, ela trava quando dá
+erro), mas guarda informações sobre <em>warnings</em> e
+<em>messages</em>.
+</li>
 </ul>
-<div class="figure"><span id="fig:unnamed-chunk-5"></span>
+<span id="fig:unnamed-chunk-5"></span>
 <img src="http://curso-r.com/blog/2017-04-09-try_files/figure-html/unnamed-chunk-5-1.png" alt="Admita, voc&#xEA; n&#xE3;o imaginava que teria de pensar em gram&#xE1;tica para programar em R." width="768">
 <p class="caption">
-Figure 1: Admita, voc&#xEA; n&#xE3;o imaginava que teria de pensar em gram&#xE1;tica para programar em R.
+Figure 1: Admita, você não imaginava que teria de pensar em gramática
+para programar em R.
 </p>
-</div>
-<p>Vamos ver as tr&#xEA;s fun&#xE7;&#xF5;es colocadas em pr&#xE1;tica. Como exemplo usaremos a fun&#xE7;&#xE3;o <code>log</code>, que i) retorna um n&#xFA;mero quando a entrada &#xE9; um n&#xFA;mero positivo, ii) d&#xE1; um warning quando a entrada &#xE9; um n&#xFA;mero menor ou igual a zero, e iii) d&#xE1; um erro se a entrada n&#xE3;o &#xE9; um n&#xFA;mero.</p>
+
+<p>
+Vamos ver as três funções colocadas em prática. Como exemplo usaremos a
+função <code>log</code>, que i) retorna um número quando a entrada é um
+número positivo, ii) dá um warning quando a entrada é um número menor ou
+igual a zero, e iii) dá um erro se a entrada não é um número.
+</p>
 <pre class="r"><code>log(10)
 ## [1] 2.302585
 log(-1)
@@ -44,17 +97,24 @@ log(-1)
 ## [1] NaN
 log(&apos;a&apos;)
 ## Error in log(&quot;a&quot;): non-numeric argument to mathematical function</code></pre>
-<p>Vamos fazer as vers&#xF5;es modificadas de <code>log</code>:</p>
+<p>
+Vamos fazer as versões modificadas de <code>log</code>:
+</p>
 <pre class="r"><code>library(purrr)
 safe_log &lt;- safely(log) # outra forma fancy de escrever isso: log %&gt;% safely()
 possible_log &lt;- possibly(log, otherwise = &apos;putz&apos;)
 quiet_log &lt;- quietly(log)</code></pre>
-<p>Vamos mapear os seguintes elementos nessas fun&#xE7;&#xF5;es:</p>
+<p>
+Vamos mapear os seguintes elementos nessas funções:
+</p>
 <pre class="r"><code>entradas &lt;- list(10, -1, &apos;a&apos;)</code></pre>
-<p>Agora, os resultados:</p>
+<p>
+Agora, os resultados:
+</p>
 <pre class="r"><code>## Esse c&#xF3;digo vai travar
 map(entradas, log) ## Warning in .f(.x[[i]], ...): NaNs produced
-## Error in .f(.x[[i]], ...): non-numeric argument to mathematical function</code></pre> <pre class="r"><code>## Retorna uma lista com erros e resultados NULL
+## Error in .f(.x[[i]], ...): non-numeric argument to mathematical function</code></pre>
+<pre class="r"><code>## Retorna uma lista com erros e resultados NULL
 map(entradas, safe_log)
 ## Warning in .f(...): NaNs produced
 ## [[1]]
@@ -71,7 +131,8 @@ map(entradas, safe_log)
 ## [[3]]$result
 ## NULL
 ## ## [[3]]$error
-## &lt;simpleError in .f(...): non-numeric argument to mathematical function&gt;</code></pre> <pre class="r"><code>## Retorna uma lista com os resultados que deram certo
+## &lt;simpleError in .f(...): non-numeric argument to mathematical function&gt;</code></pre>
+<pre class="r"><code>## Retorna uma lista com os resultados que deram certo
 map(entradas, possible_log)
 ## Warning in .f(...): NaNs produced
 ## [[1]]
@@ -79,7 +140,8 @@ map(entradas, possible_log)
 ## ## [[2]]
 ## [1] NaN
 ## ## [[3]]
-## [1] &quot;putz&quot;</code></pre> <pre class="r"><code>## Tamb&#xE9;m trava, mesmo problema de log
+## [1] &quot;putz&quot;</code></pre>
+<pre class="r"><code>## Tamb&#xE9;m trava, mesmo problema de log
 map(entradas, quiet_log) ## Error in .f(...): non-numeric argument to mathematical function ## Quando funciona, retorna todos os warnings e messages
 map(entradas[1:2], quiet_log)
 ## [[1]]
@@ -100,8 +162,12 @@ map(entradas[1:2], quiet_log)
 ## [1] &quot;NaNs produced&quot;
 ## ## [[2]]$messages
 ## character(0)</code></pre>
-</div>
-<div id="combo-com-purrr-e-tibble" class="section level2"> <p>Um combo que eu gosto bastante de usar &#xE9; adicionar erros do c&#xF3;digo retornado por <code>safely()</code> dentro de uma <code>tibble</code>. Uma forma de fazer isso &#xE9; com o c&#xF3;digo abaixo:</p>
+
+<p>
+Um combo que eu gosto bastante de usar é adicionar erros do código
+retornado por <code>safely()</code> dentro de uma <code>tibble</code>.
+Uma forma de fazer isso é com o código abaixo:
+</p>
 <pre class="r"><code>library(tibble) # adiciona um resultado default caso d&#xEA; erro. No caso, NA.
 safe_log2 &lt;- log %&gt;% safely(otherwise = NA_real_) d_result &lt;- entradas %&gt;% map(safe_log2) %&gt;% # ao inv&#xE9;s de uma lista de tamanho 3 com 2 elementos (result e error), # temos uma lista de tamanho 2 (result e error) com 3 elementos. transpose() %&gt;% # simplifica o vetor de resultados simplify_all() %&gt;% # converte para data frame as_tibble() d_result
 ## # A tibble: 3 x 2
@@ -110,7 +176,19 @@ safe_log2 &lt;- log %&gt;% safely(otherwise = NA_real_) d_result &lt;- entradas 
 ## 1 2.302585 &lt;NULL&gt;
 ## 2 NaN &lt;NULL&gt;
 ## 3 NA &lt;S3: simpleError&gt;</code></pre>
-<p>Assim, &#xE9; poss&#xED;vel guardar as informa&#xE7;&#xF5;es dos erros de forma concisa, sem perder a informa&#xE7;&#xE3;o dos erros.</p>
-<p>E &#xE9; isso. Happy coding ;)</p>
-<p><strong>PS</strong>: At&#xE9; pouco tempo atr&#xE1;s eu usava a fun&#xE7;&#xE3;o <code>dplyr::failwith()</code> para fazer o mesmo que <code>possibly()</code>. Por&#xE9;m, descobri que essa fun&#xE7;&#xE3;o <a href="https://github.com/tidyverse/dplyr/blob/master/NEWS.md#deprecated-and-defunct">ser&#xE1; retirada do <code>dplyr</code> no futuro</a>. Ent&#xE3;o se voc&#xEA; &#xE9; um usu&#xE1;rio de <code>failwith()</code>, est&#xE1; na hora de mudar!</p>
-</div> </div></div>
+<p>
+Assim, é possível guardar as informações dos erros de forma concisa, sem
+perder a informação dos erros.
+</p>
+<p>
+E é isso. Happy coding ;)
+</p>
+<p>
+<strong>PS</strong>: Até pouco tempo atrás eu usava a função
+<code>dplyr::failwith()</code> para fazer o mesmo que
+<code>possibly()</code>. Porém, descobri que essa função
+<a href="https://github.com/tidyverse/dplyr/blob/master/NEWS.md#deprecated-and-defunct">será
+retirada do <code>dplyr</code> no futuro</a>. Então se você é um usuário
+de <code>failwith()</code>, está na hora de mudar!
+</p>
+
