--- a/content/paixao-por-dados/2016-11-18-olx4.md
+++ b/content/paixao-por-dados/2016-11-18-olx4.md
@@ -4,14 +4,34 @@ date = "2016-11-18 03:00:00"
 categories = ["paixao-por-dados"]
 +++
 
-<article class="blog-post"> <p>No post anterior da s&#xE9;rie, mostrei como fazer um gr&#xE1;fico em um mapa a partir das coordenadas geogr&#xE1;ficas dos im&#xF3;veis. Neste post, a grande sacada da s&#xE9;rie: um mapa interativo em que &#xE9; poss&#xED;vel visualizar diversas dimens&#xF5;es de cada um dos apartamentos, como o pre&#xE7;o do aluguel, a proximidade em rela&#xE7;&#xE3;o a um ponto de interesse, etc.</p> <p>Dessa vez, vou usar o data frame que contem todos os apartamentos listados no OLX que eu n&#xE3;o mostrei (exatamente) como obter e nem posso compartilhar em respeito ao OLX.</p> <figure class="highlight"><pre><code class="language-r"><span class="n">library</span><span class="p">(</span><span class="n">magrittr</span><span class="p">)</span><span class="w">
+<article class="blog-post">
+<p>
+No post anterior da série, mostrei como fazer um gráfico em um mapa a
+partir das coordenadas geográficas dos imóveis. Neste post, a grande
+sacada da série: um mapa interativo em que é possível visualizar
+diversas dimensões de cada um dos apartamentos, como o preço do aluguel,
+a proximidade em relação a um ponto de interesse, etc.
+</p>
+<p>
+Dessa vez, vou usar o data frame que contem todos os apartamentos
+listados no OLX que eu não mostrei (exatamente) como obter e nem posso
+compartilhar em respeito ao OLX.
+</p>
+<figure class="highlight">
+<pre><code class="language-r"><span class="n">library</span><span class="p">(</span><span class="n">magrittr</span><span class="p">)</span><span class="w">
 </span><span class="n">library</span><span class="p">(</span><span class="n">dplyr</span><span class="p">)</span><span class="w">
 </span><span class="n">library</span><span class="p">(</span><span class="n">leaflet</span><span class="p">)</span><span class="w">
 </span><span class="n">library</span><span class="p">(</span><span class="n">stringr</span><span class="p">)</span><span class="w">
-</span><span class="n">library</span><span class="p">(</span><span class="n">RColorBrewer</span><span class="p">)</span></code></pre></figure> <figure class="highlight"><pre><code class="language-r"><span class="c1"># carregar arquivo com apartamentos
+</span><span class="n">library</span><span class="p">(</span><span class="n">RColorBrewer</span><span class="p">)</span></code></pre>
+</figure>
+<figure class="highlight">
+<pre><code class="language-r"><span class="c1"># carregar arquivo com apartamentos
 </span><span class="n">df.apt</span><span class="w"> </span><span class="o">&lt;-</span><span class="w"> </span><span class="n">read.csv2</span><span class="p">(</span><span class="s2">&quot;/home/sillas/R/Projetos/olx/data/post4-df.apt.csv&quot;</span><span class="p">,</span><span class="w"> </span><span class="n">stringsAsFactors</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="kc">FALSE</span><span class="p">)</span><span class="w"> </span><span class="c1"># carregar arquivos com coordenadas
 </span><span class="n">df.coord</span><span class="w"> </span><span class="o">&lt;-</span><span class="w"> </span><span class="n">read.csv2</span><span class="p">(</span><span class="s2">&quot;/home/sillas/R/Projetos/olx/data/post4-coordenadas.csv&quot;</span><span class="p">,</span><span class="w"> </span><span class="n">stringsAsFactors</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="kc">FALSE</span><span class="p">)</span><span class="w">
-</span><span class="n">head</span><span class="p">(</span><span class="n">df.coord</span><span class="p">)</span></code></pre></figure> <figure class="highlight"><pre><code class="language-text">## cep
+</span><span class="n">head</span><span class="p">(</span><span class="n">df.coord</span><span class="p">)</span></code></pre>
+</figure>
+<figure class="highlight">
+<pre><code class="language-text">## cep
 ## 1 20550018
 ## 2 22411030
 ## 3 20751010
@@ -31,11 +51,27 @@ categories = ["paixao-por-dados"]
 ## 3 -22.88317 -43.30166
 ## 4 -22.98421 -43.19162
 ## 5 -22.85579 -43.49151
-## 6 -22.97227 -43.18664</code></pre></figure> <figure class="highlight"><pre><code class="language-r"><span class="c1"># Juntar arquivos em um s&#xF3;
+## 6 -22.97227 -43.18664</code></pre>
+</figure>
+<figure class="highlight">
+<pre><code class="language-r"><span class="c1"># Juntar arquivos em um s&#xF3;
 </span><span class="n">df.apt</span><span class="o">$</span><span class="n">cep</span><span class="w"> </span><span class="o">%&lt;&gt;%</span><span class="w"> </span><span class="nf">as.character</span><span class="p">()</span><span class="w">
 </span><span class="n">df.apt</span><span class="w"> </span><span class="o">%&lt;&gt;%</span><span class="w"> </span><span class="n">left_join</span><span class="p">(</span><span class="n">df.coord</span><span class="p">,</span><span class="w"> </span><span class="n">by</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="s2">&quot;cep&quot;</span><span class="p">)</span><span class="w">
-</span><span class="n">rm</span><span class="p">(</span><span class="n">df.coord</span><span class="p">)</span></code></pre></figure> <p>Al&#xE9;m de apartamentos, eu tenho tamb&#xE9;m os dados de <a href="http://rj.olx.com.br/rio-de-janeiro-e-regiao/imoveis/aluguel/aluguel-de-quartos">quartos para alugar</a> no OLX, que apesar de eu n&#xE3;o ter mostrado no blog o procedimento para os conseguir, ele &#xE9; basicamente o mesmo do que eu mostrei para os apartamentos.</p> <figure class="highlight"><pre><code class="language-r"><span class="n">df.quartos</span><span class="w"> </span><span class="o">&lt;-</span><span class="w"> </span><span class="n">read.csv2</span><span class="p">(</span><span class="s2">&quot;/home/sillas/R/Projetos/olx/data/post4-quartos.csv&quot;</span><span class="p">,</span><span class="w"> </span><span class="n">stringsAsFactors</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="kc">FALSE</span><span class="p">)</span><span class="w">
-</span><span class="n">head</span><span class="p">(</span><span class="n">df.quartos</span><span class="p">)</span></code></pre></figure> <figure class="highlight"><pre><code class="language-text">## link
+</span><span class="n">rm</span><span class="p">(</span><span class="n">df.coord</span><span class="p">)</span></code></pre>
+</figure>
+<p>
+Além de apartamentos, eu tenho também os dados de
+<a href="http://rj.olx.com.br/rio-de-janeiro-e-regiao/imoveis/aluguel/aluguel-de-quartos">quartos
+para alugar</a> no OLX, que apesar de eu não ter mostrado no blog o
+procedimento para os conseguir, ele é basicamente o mesmo do que eu
+mostrei para os apartamentos.
+</p>
+<figure class="highlight">
+<pre><code class="language-r"><span class="n">df.quartos</span><span class="w"> </span><span class="o">&lt;-</span><span class="w"> </span><span class="n">read.csv2</span><span class="p">(</span><span class="s2">&quot;/home/sillas/R/Projetos/olx/data/post4-quartos.csv&quot;</span><span class="p">,</span><span class="w"> </span><span class="n">stringsAsFactors</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="kc">FALSE</span><span class="p">)</span><span class="w">
+</span><span class="n">head</span><span class="p">(</span><span class="n">df.quartos</span><span class="p">)</span></code></pre>
+</figure>
+<figure class="highlight">
+<pre><code class="language-text">## link
 ## 1 http://rj.olx.com.br/rio-de-janeiro-e-regiao/imoveis/oportunidade-no-engenho-novo-1-quarto-268551811
 ## 2 http://rj.olx.com.br/rio-de-janeiro-e-regiao/imoveis/alugo-kitnets-268550116
 ## 3 http://rj.olx.com.br/rio-de-janeiro-e-regiao/imoveis/quarto-equipado-p-vagas-metro-s-pena-250m-todos-os-direitos-266676832
@@ -69,14 +105,29 @@ categories = ["paixao-por-dados"]
 ## 3 -22.92492 -43.23611
 ## 4 -22.93931 -43.36200
 ## 5 -22.92492 -43.23611
-## 6 -22.90321 -43.57095</code></pre></figure> <p>J&#xE1; temos tudo o que precisamos para plotar os apartamentos em um mapa. Isso &#xE9; feito muito facilmente com o pacote <code class="highlighter-rouge">leaflet</code>. Eu comento abaixo o passo-a-passo do c&#xF3;digo para plotar o mapa.</p> <figure class="highlight"><pre><code class="language-r"><span class="c1"># Remover os apartamentos sem coordenadas
+## 6 -22.90321 -43.57095</code></pre>
+</figure>
+<p>
+Já temos tudo o que precisamos para plotar os apartamentos em um mapa.
+Isso é feito muito facilmente com o pacote
+<code class="highlighter-rouge">leaflet</code>. Eu comento abaixo o
+passo-a-passo do código para plotar o mapa.
+</p>
+<figure class="highlight">
+<pre><code class="language-r"><span class="c1"># Remover os apartamentos sem coordenadas
 </span><span class="n">df.apt</span><span class="w"> </span><span class="o">%&lt;&gt;%</span><span class="w"> </span><span class="n">filter</span><span class="p">(</span><span class="o">!</span><span class="nf">is.na</span><span class="p">(</span><span class="n">lat</span><span class="p">))</span><span class="w">
 </span><span class="n">df.quartos</span><span class="w"> </span><span class="o">%&lt;&gt;%</span><span class="w"> </span><span class="n">filter</span><span class="p">(</span><span class="o">!</span><span class="nf">is.na</span><span class="p">(</span><span class="n">lat</span><span class="p">))</span><span class="w">
 </span><span class="c1"># Para distinguir os apartamentos no mapa pelo pre&#xE7;o, usamos a fun&#xE7;&#xE3;o colorBin para criar intervalos de cores
 # Qual seria um bom intervalo?
 </span><span class="n">aluguel</span><span class="w"> </span><span class="o">&lt;-</span><span class="w"> </span><span class="nf">c</span><span class="p">(</span><span class="n">df.apt</span><span class="o">$</span><span class="n">preco</span><span class="p">,</span><span class="w"> </span><span class="n">df.quartos</span><span class="o">$</span><span class="n">preco</span><span class="p">)</span><span class="w">
 </span><span class="n">aluguel</span><span class="w"> </span><span class="o">%&lt;&gt;%</span><span class="w"> </span><span class="n">na.omit</span><span class="p">()</span><span class="w">
-</span><span class="n">quantile</span><span class="p">(</span><span class="n">aluguel</span><span class="p">,</span><span class="w"> </span><span class="n">seq</span><span class="p">(</span><span class="m">0</span><span class="p">,</span><span class="w"> </span><span class="m">1</span><span class="p">,</span><span class="w"> </span><span class="m">0.05</span><span class="p">))</span></code></pre></figure> <figure class="highlight"><pre><code class="language-text">## 0% 5% 10% 15% 20% 25% ## 1.0 450.0 580.0 700.0 780.0 850.0 ## 30% 35% 40% 45% 50% 55% ## 936.0 1000.0 1100.0 1200.0 1300.0 1495.4 ## 60% 65% 70% 75% 80% 85% ## 1600.0 1799.3 1950.0 2100.0 2400.0 2700.0 ## 90% 95% 100% ## 3200.0 4498.9 21750000.0</code></pre></figure> <figure class="highlight"><pre><code class="language-r"><span class="c1"># 90% dos pre&#xE7;os est&#xE3;o abaixo de R$3200
+</span><span class="n">quantile</span><span class="p">(</span><span class="n">aluguel</span><span class="p">,</span><span class="w"> </span><span class="n">seq</span><span class="p">(</span><span class="m">0</span><span class="p">,</span><span class="w"> </span><span class="m">1</span><span class="p">,</span><span class="w"> </span><span class="m">0.05</span><span class="p">))</span></code></pre>
+</figure>
+<figure class="highlight">
+<pre><code class="language-text">## 0% 5% 10% 15% 20% 25% ## 1.0 450.0 580.0 700.0 780.0 850.0 ## 30% 35% 40% 45% 50% 55% ## 936.0 1000.0 1100.0 1200.0 1300.0 1495.4 ## 60% 65% 70% 75% 80% 85% ## 1600.0 1799.3 1950.0 2100.0 2400.0 2700.0 ## 90% 95% 100% ## 3200.0 4498.9 21750000.0</code></pre>
+</figure>
+<figure class="highlight">
+<pre><code class="language-r"><span class="c1"># 90% dos pre&#xE7;os est&#xE3;o abaixo de R$3200
 </span><span class="n">intervalo</span><span class="w"> </span><span class="o">&lt;-</span><span class="w"> </span><span class="n">seq</span><span class="p">(</span><span class="m">0</span><span class="p">,</span><span class="w"> </span><span class="m">3200</span><span class="p">,</span><span class="w"> </span><span class="m">400</span><span class="p">)</span><span class="w">
 </span><span class="c1"># criar palette para colorir os pontos no mapa: verde significa aluguel baixo, vermelho aluguel caro
 </span><span class="n">palette_rev</span><span class="w"> </span><span class="o">&lt;-</span><span class="w"> </span><span class="n">rev</span><span class="p">(</span><span class="n">brewer.pal</span><span class="p">(</span><span class="nf">length</span><span class="p">(</span><span class="n">intervalo</span><span class="p">),</span><span class="w"> </span><span class="s2">&quot;RdYlGn&quot;</span><span class="p">))</span><span class="w"> </span><span class="c1"># O vetor de cores &#xE9; criado com a fun&#xE7;&#xE3;o colorBin
@@ -89,9 +140,24 @@ categories = ["paixao-por-dados"]
 </span><span class="n">jit</span><span class="w"> </span><span class="o">&lt;-</span><span class="w"> </span><span class="m">40</span><span class="w">
 </span><span class="n">df.apt</span><span class="o">$</span><span class="n">lat</span><span class="w"> </span><span class="o">&lt;-</span><span class="w"> </span><span class="n">jitter</span><span class="p">(</span><span class="n">df.apt</span><span class="o">$</span><span class="n">lat</span><span class="p">,</span><span class="w"> </span><span class="n">jit</span><span class="p">)</span><span class="w">
 </span><span class="n">df.apt</span><span class="o">$</span><span class="n">lon</span><span class="w"> </span><span class="o">&lt;-</span><span class="w"> </span><span class="n">jitter</span><span class="p">(</span><span class="n">df.apt</span><span class="o">$</span><span class="n">lon</span><span class="p">,</span><span class="w"> </span><span class="n">jit</span><span class="p">)</span><span class="w"> </span><span class="n">df.quartos</span><span class="o">$</span><span class="n">lat</span><span class="w"> </span><span class="o">%&lt;&gt;%</span><span class="w"> </span><span class="n">jitter</span><span class="p">(</span><span class="n">jit</span><span class="p">)</span><span class="w">
-</span><span class="n">df.quartos</span><span class="o">$</span><span class="n">lon</span><span class="w"> </span><span class="o">%&lt;&gt;%</span><span class="w"> </span><span class="n">jitter</span><span class="p">(</span><span class="n">jit</span><span class="p">)</span></code></pre></figure> <figure class="highlight"><pre><code class="language-r"><span class="w"> </span><span class="c1"># iniciar objeto leaflet
+</span><span class="n">df.quartos</span><span class="o">$</span><span class="n">lon</span><span class="w"> </span><span class="o">%&lt;&gt;%</span><span class="w"> </span><span class="n">jitter</span><span class="p">(</span><span class="n">jit</span><span class="p">)</span></code></pre>
+</figure>
+<figure class="highlight">
+<pre><code class="language-r"><span class="w"> </span><span class="c1"># iniciar objeto leaflet
 </span><span class="w"> </span><span class="n">map</span><span class="w"> </span><span class="o">&lt;-</span><span class="w"> </span><span class="n">leaflet</span><span class="p">()</span><span class="w"> </span><span class="o">%&gt;%</span><span class="w"> </span><span class="n">addTiles</span><span class="p">()</span><span class="w"> </span><span class="o">%&gt;%</span><span class="w"> </span><span class="n">addProviderTiles</span><span class="p">(</span><span class="s2">&quot;OpenStreetMap.BlackAndWhite&quot;</span><span class="p">)</span><span class="w"> </span><span class="o">%&gt;%</span><span class="w"> </span><span class="c1"># coordenadas de um ponto em espec&#xED;fico para exemplo
 </span><span class="w"> </span><span class="n">addMarkers</span><span class="p">(</span><span class="n">lng</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="m">-43.183447</span><span class="p">,</span><span class="w"> </span><span class="n">lat</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="m">-22.913912</span><span class="p">)</span><span class="w"> </span><span class="o">%&gt;%</span><span class="w"> </span><span class="c1"># plotar apartamentos
 </span><span class="w"> </span><span class="n">addCircleMarkers</span><span class="p">(</span><span class="n">data</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">df.apt</span><span class="p">,</span><span class="w"> </span><span class="n">lng</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="o">~</span><span class="n">lon</span><span class="p">,</span><span class="w"> </span><span class="n">lat</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="o">~</span><span class="n">lat</span><span class="p">,</span><span class="w"> </span><span class="n">color</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="o">~</span><span class="n">vetorCoresApt</span><span class="p">(</span><span class="n">preco</span><span class="p">),</span><span class="w"> </span><span class="n">opacity</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="m">1.5</span><span class="p">,</span><span class="w"> </span><span class="n">popup</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">textoPopup</span><span class="p">(</span><span class="n">df.apt</span><span class="p">,</span><span class="w"> </span><span class="s2">&quot;apartamento&quot;</span><span class="p">),</span><span class="w"> </span><span class="c1"># Definir nome do grupo para ser usado na camada
 </span><span class="w"> </span><span class="n">group</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="s2">&quot;Apartamentos&quot;</span><span class="p">)</span><span class="w"> </span><span class="o">%&gt;%</span><span class="w"> </span><span class="c1"># plotar quartos
-</span><span class="w"> </span><span class="n">addCircleMarkers</span><span class="p">(</span><span class="n">data</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">df.quartos</span><span class="p">,</span><span class="w"> </span><span class="n">lng</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="o">~</span><span class="n">lon</span><span class="p">,</span><span class="w"> </span><span class="n">lat</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="o">~</span><span class="n">lat</span><span class="p">,</span><span class="w"> </span><span class="n">color</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="o">~</span><span class="n">vetorCoresQuarto</span><span class="p">(</span><span class="n">preco</span><span class="p">),</span><span class="w"> </span><span class="n">opacity</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="m">1.5</span><span class="p">,</span><span class="w"> </span><span class="n">popup</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">textoPopup</span><span class="p">(</span><span class="n">df.quartos</span><span class="p">,</span><span class="w"> </span><span class="s2">&quot;quarto&quot;</span><span class="p">),</span><span class="w"> </span><span class="n">group</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="s2">&quot;Quartos&quot;</span><span class="p">)</span><span class="w"> </span><span class="o">%&gt;%</span><span class="w"> </span><span class="n">addLayersControl</span><span class="p">(</span><span class="w"> </span><span class="n">overlayGroups</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="nf">c</span><span class="p">(</span><span class="s2">&quot;Apartamentos&quot;</span><span class="p">,</span><span class="w"> </span><span class="s2">&quot;Quartos&quot;</span><span class="p">),</span><span class="w"> </span><span class="n">options</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">layersControlOptions</span><span class="p">(</span><span class="n">collapsed</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="kc">FALSE</span><span class="p">)</span><span class="w"> </span><span class="p">)</span><span class="w"> </span><span class="o">%&gt;%</span><span class="w"> </span><span class="n">addLegend</span><span class="p">(</span><span class="n">pal</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">vetorCoresApt</span><span class="p">,</span><span class="w"> </span><span class="n">values</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">df.apt</span><span class="o">$</span><span class="n">preco</span><span class="p">)</span></code></pre></figure> <p>Clique na imagem abaixo para abrir o produto final:</p> <p>http://i.imgur.com/dDpeckS.png</p> <p><a href="https://sillasgonzaga.shinyapps.io/aptsnorio/"><img src="http://i.imgur.com/dDpeckS.png"></a></p> </article>
+</span><span class="w"> </span><span class="n">addCircleMarkers</span><span class="p">(</span><span class="n">data</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">df.quartos</span><span class="p">,</span><span class="w"> </span><span class="n">lng</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="o">~</span><span class="n">lon</span><span class="p">,</span><span class="w"> </span><span class="n">lat</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="o">~</span><span class="n">lat</span><span class="p">,</span><span class="w"> </span><span class="n">color</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="o">~</span><span class="n">vetorCoresQuarto</span><span class="p">(</span><span class="n">preco</span><span class="p">),</span><span class="w"> </span><span class="n">opacity</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="m">1.5</span><span class="p">,</span><span class="w"> </span><span class="n">popup</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">textoPopup</span><span class="p">(</span><span class="n">df.quartos</span><span class="p">,</span><span class="w"> </span><span class="s2">&quot;quarto&quot;</span><span class="p">),</span><span class="w"> </span><span class="n">group</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="s2">&quot;Quartos&quot;</span><span class="p">)</span><span class="w"> </span><span class="o">%&gt;%</span><span class="w"> </span><span class="n">addLayersControl</span><span class="p">(</span><span class="w"> </span><span class="n">overlayGroups</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="nf">c</span><span class="p">(</span><span class="s2">&quot;Apartamentos&quot;</span><span class="p">,</span><span class="w"> </span><span class="s2">&quot;Quartos&quot;</span><span class="p">),</span><span class="w"> </span><span class="n">options</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">layersControlOptions</span><span class="p">(</span><span class="n">collapsed</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="kc">FALSE</span><span class="p">)</span><span class="w"> </span><span class="p">)</span><span class="w"> </span><span class="o">%&gt;%</span><span class="w"> </span><span class="n">addLegend</span><span class="p">(</span><span class="n">pal</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">vetorCoresApt</span><span class="p">,</span><span class="w"> </span><span class="n">values</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">df.apt</span><span class="o">$</span><span class="n">preco</span><span class="p">)</span></code></pre>
+</figure>
+<p>
+Clique na imagem abaixo para abrir o produto final:
+</p>
+<p>
+<http://i.imgur.com/dDpeckS.png>
+</p>
+<p>
+<a href="https://sillasgonzaga.shinyapps.io/aptsnorio/"><img src="http://i.imgur.com/dDpeckS.png"></a>
+</p>
+</article>
+
