--- a/content/paixao-por-dados/2017-05-16-30meetup.md
+++ b/content/paixao-por-dados/2017-05-16-30meetup.md
@@ -4,4 +4,20 @@ date = "2017-05-16 03:00:00"
 categories = ["paixao-por-dados"]
 +++
 
-<article class="blog-post"> <p>Com muito orgulho, anuncio que o blog Paix&#xE3;o por Dados estar&#xE1; representado no primeiro meetup do grupo <a href="https://www.meetup.com/analyticsemtudo/">#AnalyticsEmTudo</a>, no Rio de Janeiro, onde moro atualmente. Serei um dos tr&#xEA;s palestrantes do encontro. Falarei um pouco sobre os principais projetos que realizei usando o R, dando maior &#xEA;nfase aos relacionados a Dados Abertos, que &#xE9; o tema dessa edi&#xE7;&#xE3;o.</p> <p>As inscri&#xE7;&#xF5;es podem ser feitas <a href="https://www.meetup.com/analyticsemtudo/events/237456649/">neste link</a>.</p> </article>
+<article class="blog-post">
+<p>
+Com muito orgulho, anuncio que o blog Paixão por Dados estará
+representado no primeiro meetup do grupo
+<a href="https://www.meetup.com/analyticsemtudo/">\#AnalyticsEmTudo</a>,
+no Rio de Janeiro, onde moro atualmente. Serei um dos três palestrantes
+do encontro. Falarei um pouco sobre os principais projetos que realizei
+usando o R, dando maior ênfase aos relacionados a Dados Abertos, que é o
+tema dessa edição.
+</p>
+<p>
+As inscrições podem ser feitas
+<a href="https://www.meetup.com/analyticsemtudo/events/237456649/">neste
+link</a>.
+</p>
+</article>
+
