--- a/content/paixao-por-dados/2017-05-23-ser-2017.md
+++ b/content/paixao-por-dados/2017-05-23-ser-2017.md
@@ -4,4 +4,19 @@ date = "2017-05-23 03:00:00"
 categories = ["paixao-por-dados"]
 +++
 
-<article class="blog-post"> <p>Hoje (23/05), o <strong>Paix&#xE3;o por Dados</strong> esteve presente no II Semin&#xE1;rio Internacional de Estat&#xED;stica com R, realizado na UFF, em Niter&#xF3;i. Com muito orgulho, pude falar de parte dos projetos que realizei com R, conquistas pessoais e profissionais que obtive como resultado pela minha dedica&#xE7;&#xE3;o &#xE0; linguagem e ainda dicas para quem quer se aprofundar no R.</p> <p>Os slides da minha apresenta&#xE7;&#xE3;o, entitulada <em>Como o R pode despertar sua paix&#xE3;o por dados</em> se encontram <a href="https://www.slideshare.net/sillastg/como-o-r-pode-despertar-sua-paixo-por-dados">aqui</a>.</p> </article>
+<article class="blog-post">
+<p>
+Hoje (23/05), o <strong>Paixão por Dados</strong> esteve presente no II
+Seminário Internacional de Estatística com R, realizado na UFF, em
+Niterói. Com muito orgulho, pude falar de parte dos projetos que
+realizei com R, conquistas pessoais e profissionais que obtive como
+resultado pela minha dedicação à linguagem e ainda dicas para quem quer
+se aprofundar no R.
+</p>
+<p>
+Os slides da minha apresentação, entitulada <em>Como o R pode despertar
+sua paixão por dados</em> se encontram
+<a href="https://www.slideshare.net/sillastg/como-o-r-pode-despertar-sua-paixo-por-dados">aqui</a>.
+</p>
+</article>
+
