--- a/content/curso-r/2017-04-24-r34.md
+++ b/content/curso-r/2017-04-24-r34.md
@@ -73,7 +73,7 @@ cmp_mean_r
 ## m = m + x[i] / n
 ## m
 ## }
-## &lt;bytecode: 0x3be52c0&gt;</code></pre>
+## &lt;bytecode: 0x35e92c0&gt;</code></pre>
 <p>
 Para mostrar a mudança, vamos comparar o desempenho das funções usando
 <code>microbenchmark()</code>. Essa função calcula o tempo de execução
