adicionar url original no yaml

--- a/content/curso-r/2017-04-08-progress.md
+++ b/content/curso-r/2017-04-08-progress.md
@@ -2,6 +2,7 @@
 title = "As barras do progresso"
 date = "2017-04-10 11:07:31"
 categories = ["curso-r"]
+original_url = "http://curso-r.com/blog/2017/04/10/2017-04-08-progress/"
 +++
 
 <p class="text-muted text-uppercase mb-small text-right">
