--- a/content/curso-r/2017-04-08-top10-dicas-verao-2017.md
+++ b/content/curso-r/2017-04-08-top10-dicas-verao-2017.md
@@ -2,6 +2,7 @@
 title = "Top 10 dicas do Curso R de verão 2017"
 date = "2017-04-08"
 categories = ["curso-r"]
+original_url = "http://curso-r.com/blog/2017/04/08/2017-04-08-top10-dicas-verao-2017/"
 +++
 
 <p class="text-muted text-uppercase mb-small text-right">
