--- a/content/curso-r/2017-04-09-aecio.md
+++ b/content/curso-r/2017-04-09-aecio.md
@@ -2,6 +2,7 @@
 title = "Análise das emoções de Aécio Neves"
 date = "2017-04-15 11:07:31"
 categories = ["curso-r"]
+original_url = "http://curso-r.com/blog/2017/04/15/2017-04-09-aecio/"
 +++
 
 <p class="text-muted text-uppercase mb-small text-right">
