--- a/content/curso-r/2017-04-09-try.md
+++ b/content/curso-r/2017-04-09-try.md
@@ -2,6 +2,7 @@
 title = "Tratando erros: the tidy way"
 date = "2017-04-20 11:07:31"
 categories = ["curso-r"]
+original_url = "http://curso-r.com/blog/2017/04/20/2017-04-09-try/"
 +++
 
 <p class="text-muted text-uppercase mb-small text-right">
