--- a/content/curso-r/2017-04-24-r34.md
+++ b/content/curso-r/2017-04-24-r34.md
@@ -2,6 +2,7 @@
 title = "R 3.4 disponível!"
 date = "2017-04-24 11:07:31"
 categories = ["curso-r"]
+original_url = "http://curso-r.com/blog/2017/04/24/2017-04-24-r34/"
 +++
 
 <p class="text-muted text-uppercase mb-small text-right">
@@ -73,7 +74,7 @@ cmp_mean_r
 ## m = m + x[i] / n
 ## m
 ## }
-## &lt;bytecode: 0x35e92c0&gt;</code></pre>
+## &lt;bytecode: 0x41662c0&gt;</code></pre>
 <p>
 Para mostrar a mudança, vamos comparar o desempenho das funções usando
 <code>microbenchmark()</code>. Essa função calcula o tempo de execução
