--- a/content/paixao-por-dados/2016-10-27-13mafs-parte1.md
+++ b/content/paixao-por-dados/2016-10-27-13mafs-parte1.md
@@ -2,6 +2,7 @@
 title = "Meu primeiro pacote R: aplicação para série temporal do varejo"
 date = "2016-10-27 03:00:00"
 categories = ["paixao-por-dados"]
+original_url = "http://sillasgonzaga.github.io/2016-10-27-13mafs-parte1/"
 +++
 
 <article class="blog-post">
