--- a/content/paixao-por-dados/2016-11-18-olx1.md
+++ b/content/paixao-por-dados/2016-11-18-olx1.md
@@ -2,6 +2,7 @@
 title = "Como usar o R para escolher um lugar para morar(1) - Web Scraping e Data Cleaning"
 date = "2016-11-18 03:00:00"
 categories = ["paixao-por-dados"]
+original_url = "http://sillasgonzaga.github.io/2016-11-18-olx1/"
 +++
 
 <article class="blog-post">
