--- a/content/paixao-por-dados/2017-01-10-tcc.md
+++ b/content/paixao-por-dados/2017-01-10-tcc.md
@@ -2,6 +2,7 @@
 title = "TCC Finalizado: "
 date = "2017-01-10 03:00:00"
 categories = ["paixao-por-dados"]
+original_url = "http://sillasgonzaga.github.io/2017-01-10-tcc/"
 +++
 
 <article class="blog-post">
