--- a/content/paixao-por-dados/2017-01-29-mafs02.md
+++ b/content/paixao-por-dados/2017-01-29-mafs02.md
@@ -2,6 +2,7 @@
 title = "mafs: Analisando a eficácia dos modelos preditivos usados no pacote"
 date = "2017-01-29 03:00:00"
 categories = ["paixao-por-dados"]
+original_url = "http://sillasgonzaga.github.io/2017-01-29-mafs02/"
 +++
 
 <article class="blog-post">
