--- a/content/paixao-por-dados/2017-05-16-30meetup.md
+++ b/content/paixao-por-dados/2017-05-16-30meetup.md
@@ -2,6 +2,7 @@
 title = "Blog Paixão por Dados estará no meetup 1º #AnalyticsEmTudo - Dados Abertos"
 date = "2017-05-16 03:00:00"
 categories = ["paixao-por-dados"]
+original_url = "http://sillasgonzaga.github.io/2017-05-16-30meetup/"
 +++
 
 <article class="blog-post">
