--- a/content/paixao-por-dados/2017-05-23-ser-2017.md
+++ b/content/paixao-por-dados/2017-05-23-ser-2017.md
@@ -2,6 +2,7 @@
 title = "Slides da minha apresentação no SER 2017"
 date = "2017-05-23 03:00:00"
 categories = ["paixao-por-dados"]
+original_url = "http://sillasgonzaga.github.io/2017-05-23-ser-2017/"
 +++
 
 <article class="blog-post">
