--- a/content/curso-r/2017-02-18-ggalt.md
+++ b/content/curso-r/2017-02-18-ggalt.md
@@ -2,6 +2,7 @@
 title = "Pacote ggalt"
 date = "2017-02-18 11:07:31"
 categories = ["curso-r"]
+original_url = "http://curso-r.com/blog/2017/02/18/2017-02-18-ggalt/"
 +++
 
 <p class="text-muted text-uppercase mb-small text-right">
