--- a/content/curso-r/2017-02-20-quartis.md
+++ b/content/curso-r/2017-02-20-quartis.md
@@ -2,6 +2,7 @@
 title = "Medidas-resumo no tidyverse"
 date = "2017-03-11 11:07:31"
 categories = ["curso-r"]
+original_url = "http://curso-r.com/blog/2017/03/11/2017-02-20-quartis/"
 +++
 
 <p class="text-muted text-uppercase mb-small text-right">
