--- a/content/curso-r/2017-03-14-parallel.md
+++ b/content/curso-r/2017-03-14-parallel.md
@@ -2,6 +2,7 @@
 title = "Paralelização no R"
 date = "2017-03-19 11:07:31"
 categories = ["curso-r"]
+original_url = "http://curso-r.com/blog/2017/03/19/2017-03-14-parallel/"
 +++
 
 <p class="text-muted text-uppercase mb-small text-right">
@@ -43,7 +44,7 @@ compatível com <code>seg</code>.
 </p>
 <pre class="r"><code>system.time({ dormir()
 })
-## user system elapsed ## 0.000 0.000 1.002</code></pre>
+## user system elapsed ## 0.000 0.000 1.001</code></pre>
 <p>
 Nosso interesse é aplicar <code>dormir()</code> em cada elemento do
 vetor <code>c(1, 2)</code>. Esse algoritmo demora <code>1 + 2 = 3</code>
@@ -52,7 +53,7 @@ segundos.
 <pre class="r"><code>segundos &lt;- c(1, 2)
 system.time({ plyr::llply(segundos, dormir)
 })
-## user system elapsed ## 0.012 0.000 3.016</code></pre>
+## user system elapsed ## 0.012 0.000 3.015</code></pre>
 <p>
 Agora vamos executar o mesmo código usando paralelização. Antes,
 precisamos
@@ -73,7 +74,7 @@ O primeiro passo é resolvido com os pacotes <code>parallel</code> e
 <pre class="r"><code>cl &lt;- parallel::makePSOCKcluster(2) # cria as c&#xF3;pias do R que rodam em paralelo
 doParallel::registerDoParallel(cl) # registra as c&#xF3;pias do R para serem usadas no plyr system.time({ plyr::llply(segundos, dormir, .parallel = TRUE)
 })
-## user system elapsed ## 0.336 0.016 2.726</code></pre>
+## user system elapsed ## 0.312 0.016 2.623</code></pre>
 <p>
 O tempo total de execução foi de ~2.2 segundos, um pouco mais do que
 <code>dormir(2)</code>. Os dois décimos de segundo adicionais são
@@ -83,7 +84,7 @@ nada:
 </p>
 <pre class="r"><code>system.time({ plyr::llply(segundos, dormir, .parallel = TRUE)
 })
-## user system elapsed ## 0.328 0.000 2.469</code></pre>
+## user system elapsed ## 0.300 0.008 2.533</code></pre>
 <p>
 Se quiser parar de rodar coisas em paralelo, basta rodar
 <code>stopCluster()</code>:
