--- a/content/curso-r/2017-04-08-glue.md
+++ b/content/curso-r/2017-04-08-glue.md
@@ -2,6 +2,7 @@
 title = "Colando textos"
 date = "2017-04-17 11:07:31"
 categories = ["curso-r"]
+original_url = "http://curso-r.com/blog/2017/04/17/2017-04-08-glue/"
 +++
 
 <p class="text-muted text-uppercase mb-small text-right">
