--- a/content/curso-r/2017-05-27-ocr.md
+++ b/content/curso-r/2017-05-27-ocr.md
@@ -2,6 +2,7 @@
 title = "PDF e OCR"
 date = "2017-05-28 11:07:31"
 categories = ["curso-r"]
+original_url = "http://curso-r.com/blog/2017/05/28/2017-05-27-ocr/"
 +++
 
 <p class="text-muted text-uppercase mb-small text-right">
