--- a/content/curso-r/2017-06-05-keras.md
+++ b/content/curso-r/2017-06-05-keras.md
@@ -2,6 +2,7 @@
 title = "Keras: colocando deep learning no pipeline"
 date = "2017-06-05 11:07:31"
 categories = ["curso-r"]
+original_url = "http://curso-r.com/blog/2017/06/05/2017-06-05-keras/"
 +++
 
 <p class="text-muted text-uppercase mb-small text-right">
