--- a/content/sopt/206987.md
+++ b/content/sopt/206987.md
@@ -3,5 +3,6 @@ title = "R gerar série temporal com datas iniciais e finais para períodos de e
 date = "2017-05-24 00:33:37"
 categories = ["sopt"]
 original_url = "https://pt.stackoverflow.com/q/206987"
+at_home="no"
 +++
 
