--- a/content/sopt/210066.md
+++ b/content/sopt/210066.md
@@ -3,5 +3,6 @@ title = "erro no server rselenium scraping google scholar"
 date = "2017-06-05 13:53:19"
 categories = ["sopt"]
 original_url = "https://pt.stackoverflow.com/q/210066"
+at_home="no"
 +++
 
