--- a/content/sopt/210535.md
+++ b/content/sopt/210535.md
@@ -3,5 +3,6 @@ title = "É possível converter este for loop para uma função da familia apply
 date = "2017-06-06 07:28:04"
 categories = ["sopt"]
 original_url = "https://pt.stackoverflow.com/q/210535"
+at_home="no"
 +++
 
