--- a/content/sopt/211138.md
+++ b/content/sopt/211138.md
@@ -3,5 +3,6 @@ title = "Número de itens para para substituir não é um múltiplo do comprimen
 date = "2017-06-08 12:14:48"
 categories = ["sopt"]
 original_url = "https://pt.stackoverflow.com/q/211138"
+at_home="no"
 +++
 
