--- a/content/sopt/211326.md
+++ b/content/sopt/211326.md
@@ -3,5 +3,6 @@ title = "Como criar um gráfico de médias e desvio padrão em um conjunto de da
 date = "2017-06-10 07:47:07"
 categories = ["sopt"]
 original_url = "https://pt.stackoverflow.com/q/211326"
+at_home="no"
 +++
 
