--- a/content/sopt/211341.md
+++ b/content/sopt/211341.md
@@ -3,5 +3,6 @@ title = "filter no dplyr utilizando uma variável categórica"
 date = "2017-06-10 07:42:25"
 categories = ["sopt"]
 original_url = "https://pt.stackoverflow.com/q/211341"
+at_home="no"
 +++
 
