--- a/content/sopt/212153.md
+++ b/content/sopt/212153.md
@@ -3,5 +3,6 @@ title = "Criar um gráfico exploratório tipo peso~coleta filtrando tratamentos 
 date = "2017-06-12 21:12:37"
 categories = ["sopt"]
 original_url = "https://pt.stackoverflow.com/q/212153"
+at_home="no"
 +++
 
