--- a/content/sopt/212565.md
+++ b/content/sopt/212565.md
@@ -3,5 +3,6 @@ title = "Selecionar múltiplas linhas de um data.frame, a partir dos maiores val
 date = "2017-06-13 17:53:23"
 categories = ["sopt"]
 original_url = "https://pt.stackoverflow.com/q/212565"
+at_home="no"
 +++
 
