--- a/content/sopt/212982.md
+++ b/content/sopt/212982.md
@@ -3,5 +3,6 @@ title = "Linguagem R: Como plotar uma curva para separar dados?"
 date = "2017-06-14 23:45:12"
 categories = ["sopt"]
 original_url = "https://pt.stackoverflow.com/q/212982"
+at_home="no"
 +++
 
